refactor, staet changes

--- a/src/footer-bar/components/footer-bar/footer-bar.component.html
+++ b/src/footer-bar/components/footer-bar/footer-bar.component.html
@@ -1,41 +1,39 @@
 <mat-toolbar class="footer-bar">
-    <ng-container *ngIf="config.conversation.featureFlag">
-      <mat-slide-toggle
-        (change)="onConversationToggle($event)"
-        color="primary"
-        [checked]="state.conversationOpen"
-      >
+  <ng-container *ngIf="conversationAndFilterConfig$ | async as config">
+    <ng-container *ngIf="config.conversation.enabled">
+      <mat-slide-toggle (change)="onConversationToggle($event)" color="primary"
+        [checked]="(conversationAndFilterState$ | async)?.conversationOpen">
         Toggle Conversation
       </mat-slide-toggle>
     </ng-container>
     <span class="spacer"></span>
-  
-    <ng-container *ngIf="config.filter.featureFlag && config.conversation.featureFlag">
-      <button mat-icon-button [matMenuTriggerFor]="filterMenu">
+
+    <ng-container *ngIf="config.filter?.enabled && config.conversation.enabled">
+      <button mat-icon-button [matMenuTriggerFor]="filterMenu" [disabled]="!isFilterEnabled()">
         <mat-icon>filter_list</mat-icon>
       </button>
-  
+
       <mat-menu #filterMenu="matMenu">
-        <ng-container *ngFor="let action of config.filter.actions">
-          <mat-checkbox
-            (change)="onFilterChange('actions', action.label, $event.checked)"
-          >
+        <ng-container *ngFor="let action of config.filter?.actions">
+          <mat-checkbox (change)="onFilterChange('actions', action.label, $event.checked)"
+            [disabled]="!isFilterEnabled()">
             {{ action.label }}
           </mat-checkbox>
         </ng-container>
-  
-        <mat-divider *ngIf="config.filter.types"></mat-divider>
-  
-        <ng-container *ngIf="config.filter.types">
-          <ng-container *ngFor="let type of config.filter.types">
-            <mat-checkbox
-              (change)="onFilterChange('types', type.label, $event.checked)"
-            >
+
+        <mat-divider *ngIf="config.filter?.types"></mat-divider>
+
+        <ng-container *ngIf="config.filter?.types">
+          <ng-container *ngFor="let type of config.filter?.types">
+            <mat-checkbox (change)="onFilterChange('types', type.label, $event.checked)"
+              [disabled]="!isFilterEnabled()">
               {{ type.label }}
             </mat-checkbox>
           </ng-container>
         </ng-container>
       </mat-menu>
     </ng-container>
-  </mat-toolbar>
-  State: {{ state | json }}
+  </ng-container>
+
+</mat-toolbar>
+ConversationAndFilterState: {{ conversationAndFilterState$ | async | json }}
