--- a/src/app/narrative/narrative.component.scss
+++ b/src/app/narrative/narrative.component.scss
@@ -28,9 +28,9 @@
 // }
 
 .narrative-container {
-//   display: flex;
-//   flex-direction: column;
-//   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 .header {
   border-bottom: 1px solid #dee2e6;
